[bug 792866] Fix contrast issues on site

--- a/media/less/fonts.less
+++ b/media/less/fonts.less
@@ -50,12 +50,22 @@
 
   @font-face {
     font-family: 'OpenSans';
-    font-weight: bold;
+    font-weight: 600;
     src: url('@{fontpath}/OpenSans-Semibold-webfont.eot'); /* IE9 Compat Modes */
     src: url('@{fontpath}/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
     url('@{fontpath}/OpenSans-Semibold-webfont.woff') format('woff'), /* Modern Browsers */
     url('@{fontpath}/OpenSans-Semibold-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
     url('@{fontpath}/OpenSans-Semibold-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+  }
+
+  @font-face {
+    font-family: 'OpenSans';
+    font-weight: bold;
+    src: url('@{fontpath}/OpenSans-Bold-webfont.eot'); /* IE9 Compat Modes */
+    src: url('@{fontpath}/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('@{fontpath}/OpenSans-Bold-webfont.woff') format('woff'), /* Modern Browsers */
+    url('@{fontpath}/OpenSans-Bold-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+    url('@{fontpath}/OpenSans-Bold-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
   }
 
   @font-face {
